Creacion de la pestaña Inicio Historial
Se creo inicio-historial.html con su respectivo css ademas de crear el view y el url, linkeado tambien desde el aside

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                 </span>
                 <h3>Inicio</h3>
             </a>
-            <a href="{% url 'veterinaria_app:historial' %}" class="historial">
+            <a href="{% url 'veterinaria_app:inicio-historial' %}" class="historial">
                 <span class="material-icons-sharp">
                     history
                 </span>
