--- a/templates/historial/inicio-historial.html
+++ b/templates/historial/inicio-historial.html
@@ -3,7 +3,9 @@
 {% block title %}Historial Clinico{% endblock title %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'styles/inicio-historial.css' %}">
-<a class="gestion" href=""><b>Gestionar Clientes/Responsables</b></a>
+
+<a class="gestion" href="{% url 'veterinaria_app:cliente-responsable' %}"><b>Gestionar Clientes/Responsables</b></a>
 <a class="gestion" href=""><b>Gestionar Mascotas/Pacientes</b></a>
 <a class="gestion" href=""><b>Gestionar Historial Clinico</b></a>
+
 {% endblock content %}
