--- a/templates/historial/cliente-responsable.html
+++ b/templates/historial/cliente-responsable.html
@@ -7,7 +7,7 @@
     <section class="header">
       <h2 class="clientes">Clientes/Responsables</h2>
        <nav class="btn">
-            <a class="agregar" href="{% url 'ventas_app:formulario' %}"><i class="fa-solid fa-plus"></i>Agregar</a>
+            <a class="agregar" href="{% url 'veterinaria_app:formulario-cliente' %}"><i class="fa-solid fa-plus"></i>Agregar</a>
         </nav>
     </section>
      <table>
