--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                 </span>
                 <h3>Inicio</h3>
             </a>
-            <a href="{% url 'veterinaria_app:historial' %}" class="historial opc">
+            <a href="{% url 'veterinaria_app:inicio-historial' %}" class="historial opc">
                 <span class="material-icons-sharp">
                     history
                 </span>
@@ -48,15 +48,6 @@
                 </span>
                 <h3>inventario</h3>
             </a>
-<<<<<<< HEAD
-            <a href="{% url 'user_app:administrador' %}" class="btn-ventas">
-                <span class="material-icons-sharp">
-                    admin_panel_settings
-                </span>
-                <h3>Administrador</h3>
-            </a>
-            <a href="#" class="salir">
-=======
             <a href="{% url 'ventas_app:facturas' %}" class="btn-ventas opc">
                 <span class="material-icons-sharp">
                     monetization_on
@@ -65,7 +56,6 @@
             </a>
             <br>
             <a href="#" class="salir opc">
->>>>>>> cf27620539f38aae37125dc20c353edc98d7326e
                 <span class="material-icons-sharp">
                     logout
                 </span>
