--- a/templates/ventas/update.html
+++ b/templates/ventas/update.html
@@ -11,6 +11,11 @@
                   {% csrf_token %}
           
                   <div id="formularioVentas">
+
+                    <div class="campo">
+                      <label>Identificacion</label>
+                      {{ form.identificacion }}
+                    </div>
           
                     <div class="campo">
                       <label>Nombre</label>
