Validacion de botones login y logout

--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -321,7 +321,7 @@ main .insights small{
 .right .top .profile{
     display:flex;
     gap: 2rem;
-    text-align: right;
+    text-align: left;
 }
 
 /*INICIO*/
