--- a/templates/ventas/ventas.html
+++ b/templates/ventas/ventas.html
@@ -14,7 +14,7 @@
     <form method="get">
     <div class="buscar">
         {% csrf_token %}
-        <input type="text" name="kword" class="t" id="kword" placeholder="Ingrese el titulo">
+        <input type="text" name="kword" class="t" id="kword" placeholder="Ingrese el nombre">
         <button class="lupa" type="submit"><img src="/static/assets/lupa.png"></button> 
       </div>
     </form>
