--- a/static/styles/formulario-historial.css
+++ b/static/styles/formulario-historial.css
@@ -9,6 +9,7 @@ body{
     color: #585858;
 }
 
+
 /*Quitar flechas de number*/
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
@@ -26,68 +27,107 @@ input[type=number] { -moz-appearance:textfield; }
     line-height: 70px;
 
     margin-left: 0px;
-    margin-right: 0px;
+    margin-right: 50px;
 }
+
 
 .content-fondo
 {
     height:500px; /*alto*/
     width:800px; /*ancho*/
     display: flex;
-    margin-left: 10%;
+    margin:auto;
     border-radius: 10px;
 }
 
-.campo{
-    width: 40%;
-    margin: 10px;
+h3{
+    text-align: left;
+}
+
+.campo1
+{
+    width: 45%;
+    padding-right: 10px;
+    text-align: left;
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
+
+.campo2 {
+    width: 45%;
+    text-align: left;
     display: inline-block;
 }
 
-.campo2{
-    display: inline-block;
-    width: 35%;
-    margin: 10px;
+
+textarea{
+    border-radius: 5px;
+    border: 1px solid #A2ABC2;
+    background: #FFFFFF;
+    resize: none;
+    padding-left: 5px;
+}
+
+.areatext{
+    width: fit-content;
+    margin-top: 10px;
 }
 
 .campo3{
-    margin: 10px;
-    padding-left: 10px;
+    padding-right: 10px;
+    text-align: left;
+    margin-bottom: 30px;
+    margin-top: 10px;
+}
+
+.campo4{
+    width: 30%;
+    padding-right: 10px;
+    text-align: left;
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
+.campo4 input{
+    width: 50px;
+}
+
+.campo , label
+{
+    padding-right: 20px;
+    text-align: left;
+    padding-bottom: 0;
+    
 }
 
 label{
-    padding-right: 10px;
+    display: inline-block;
+    padding-right: 20px;
+    text-align: left;
+    padding-bottom: 0;
 }
 
+.campo ,input 
+{
+    padding-left: 8px;
+    border-radius: 5px;
+    height: 40px;
 
-.nomalinp{
+}
+
+input{
     border: 1px solid #A2ABC2;
     background: #FFFFFF;
     width: 150px;
-    display: inline-block;
-    border-radius: 5px;
-    height: 40px;
-    padding-left: 8px;
-}
-
-.campoRadio{
-    display: inline-block;
-    width: 35%;
-    margin: 10px;
-}
-
-.campoRadio input{
-    border: 1px solid #A2ABC2;
-    background: #FFFFFF;
-    border-radius: 5px;
-    width: 10px;
-    height: 10px;
 }
 
 .formulario
 {
     height:480px; /*alto*/
-    width:600px; /*ancho*/
+    width:800px; /*ancho*/
     
 
     padding-left:0px;
@@ -95,8 +135,6 @@ label{
     margin-right: 0px;
     /*border: 1px solid #1f1c1c;*/
 }
-
-
 
 .formulario , button
 {
@@ -115,21 +153,3 @@ label{
     color: aliceblue;
     border: 0px ;
 }
-
-
-/* ------------------------Imagen-------------------*/
-.imagen-content
-{
-    height:300px; /*alto*/
-    width: 300px;
-    margin-top: 90px;
-    margin-left: -50px;
-    margin-right: 0px;
-}
-
-.imagen
-{
-    height:300px; /*alto*/
-    width: 260px; /*ancho*/
-}
-
