--- a/templates/historial/historial.html
+++ b/templates/historial/historial.html
@@ -8,7 +8,7 @@
     <section class="header">
       <h2 class="ventas">Historial Clinico</h2>
        <nav class="btn">
-          <a class="agregar" href="{% url 'ventas_app:formulario' %}"><i class="fa-solid fa-plus"></i>Agregar</a>
+          <a class="agregar" href="{% url 'veterinaria_app:formulario-historial' %}"><i class="fa-solid fa-plus"></i>Agregar</a>
         </nav>
     </section>
      <table>
