--- a/templates/historial/inicio-historial.html
+++ b/templates/historial/inicio-historial.html
@@ -6,6 +6,6 @@
 
 <a class="gestion" href="{% url 'veterinaria_app:cliente-responsable' %}"><b>Gestionar Clientes/Responsables</b></a>
 <a class="gestion" href="{% url 'veterinaria_app:mascotas' %}"><b>Gestionar Mascotas/Pacientes</b></a>
-<a class="gestion" href=""><b>Gestionar Historial Clinico</b></a>
+<a class="gestion" href="{% url 'veterinaria_app:historial' %}"><b>Gestionar Historial Clinico</b></a>
 
 {% endblock content %}
