--- a/static/styles/formulario.css
+++ b/static/styles/formulario.css
@@ -1,24 +1,27 @@
-*{
+* {
     font-family: 'Poppins', Courier, monospace;
     font-style: normal;
 }
-body{
-    
+
+body {
+
     line-height: 30px;
     text-align: center;
     color: #585858;
 }
 
 /*Quitar flechas de number*/
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
-input[type=number] { -moz-appearance:textfield; }
 
-.titulo 
-{
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.titulo {
     color: #363949;
     font-style: normal;
     font-weight: 600;
@@ -29,86 +32,85 @@ input[type=number] { -moz-appearance:textfield; }
     margin-right: 50px;
 }
 
-.content-fondo
-{
-    height:500px; /*alto*/
-    width:800px; /*ancho*/
+.content-fondo {
+    height: 500px;
+    /*alto*/
+    width: 800px;
+    /*ancho*/
     display: flex;
     justify-content: center;
-    margin:auto;
-    margin-top:5%;
+    margin: auto;
+    margin-top: 5%;
     border-radius: 10px;
 }
 
 
-.campo
-{
+.campo {
     width: 200x;
     padding-left: 0%;
     margin-left: 0px;
 }
 
-.campo , label
-{
+.campo,
+label {
     padding-right: 10px;
     text-align: left;
     padding-bottom: 5em;
-    
-    
+
+
 
 }
 
-label{
+label {
     display: inline-block;
     width: 80px;
-  }
+}
 
-.campo ,input 
-{
+.campo,
+input {
     padding-left: 8px;
     border-radius: 5px;
     height: 40px;
 
 }
 
-#descripcion
-{
+#descripcion {
     vertical-align: top;
 }
 
-#descripcionInput
-{
+#descripcionInput {
     border: 1px solid #A2ABC2;
     background: #FFFFFF;
     width: 150px;
     border-radius: 5px;
 }
 
-input{
+input {
     border: 1px solid #A2ABC2;
     background: #FFFFFF;
     width: 150px;
 }
 
-.formulario
-{
-    height:480px; /*alto*/
-    width:600px; /*ancho*/  
+.formulario {
+    height: 480px;
+    /*alto*/
+    width: 600px;
+    /*ancho*/
 }
 
-#formularioVentas
-{
+#formularioVentas {
     padding-left: 7em;
 }
 
-.formulario , button
-{
+.formulario,
+button {
     margin-top: 40px;
 }
 
-.btn , text{
-    width:260px;
-    height:40px;
+.btn,
+text {
+    width: 260px;
+    height: 40px;
     border-radius: 5px;
     font-size: 18px;
     font-style: normal;
@@ -116,23 +118,23 @@ input{
     line-height: 30px;
     background-color: #553CFB;
     color: aliceblue;
-    border: 0px ;
+    border: 0px;
 }
 
 
 /* ------------------------Imagen-------------------*/
-.imagen-content
-{
-    height:200px; /*alto*/
+.imagen-content {
+    height: 200px;
+    /*alto*/
     width: 200px;
     margin-top: 90px;
     margin-left: -50px;
     margin-right: 0px;
 }
 
-.imagen
-{
-    height:300px; /*alto*/
-    width: 260px; /*ancho*/
+.imagen {
+    height: 300px;
+    /*alto*/
+    width: 260px;
+    /*ancho*/
 }
-
