--- a/static/styles/Administrador/botones.css
+++ b/static/styles/Administrador/botones.css
@@ -1,9 +1,15 @@
 .contenedor{
-    margin-top: 100px;
-    margin-left: 200px;
+    font-family:'Poppins',sans-serif;
+    font-weight: bold;
+
+    display: flex;
+    justify-content: center;
+    
     border-radius: 12px;
-    /*border: 1px solid black;*/
-    width: 900px;
+    margin-left: 100px;
+    margin-top: 50px;
+
+    width: 1000px;
     height: 500px;
 }
 
@@ -11,19 +17,21 @@
 {
     display: grid;
     justify-content: center;
+    /*border: 1px solid black;*/
 }
 .boton{
+
     font-size: 18px;
-    width: 300px;
-    height: 120px;
+    width: 1100px;  /*ancho*/
+    height: 160px;
     
     border: 1px solid black;
     background-color: rgb(255, 255, 255);
     border-radius: 12px;
 
-    margin-top: 20px;
-    margin-left: 20px;
-    padding-top: 40px;
+    margin-top: 10px;
+    margin-left: 0px;
+    padding-top: 60px;
     text-align: center;
     text-decoration: none;
 }
@@ -32,5 +40,6 @@
 {
     background-color: #a0a9e9;
     color: white;
-    font-size: 20px;
+    font-size: 22px;
+    text-align: center;
 }
