--- a/templates/administrador/reporteUsuarios.html
+++ b/templates/administrador/reporteUsuarios.html
@@ -8,9 +8,9 @@
 <div class="contenedor">
 
         <div class="contenedor-botones">
-            <a href="{% url 'user_app:registrarUsuarios' %}" class="boton">Registrar Usuario</a>
-            <a href="{% url 'user_app:verUsuarios' %}" class="boton">Ver Tablas Usuarios</a>
-            <a href="{% url 'user_app:reporteUsuarios' %}" class="boton">Reporte Usuario</a>
+            <a class="boton">Reporte 10 productos mas Vendidos</a>
+            <a class="boton">Reporte clientes con mayor facturacion</a>
+            <a class="boton">Reporte ventas por rango de fechas</a>
         </div>
     </div>
 
