--- a/templates/administrador/home-registrar.html
+++ b/templates/administrador/home-registrar.html
@@ -8,9 +8,9 @@
 <div class="contenedor">
 
         <div class="contenedor-botones">
-            <a href="{% url 'user_app:registrarUsuariosHome' %}" class="boton">Registrar Usuario</a>
-            <a href="{% url 'user_app:homeListado' %}" class="boton">Ver Tablas Usuarios</a>
-            <button class="boton">Reporte Usuario</button>
+            <a href="{% url 'user_app:registrar-vendedor' %}" class="boton">Registrar Vendedor</a>
+            <a href="{% url 'user_app:registrar-veterinario' %}" class="boton">Registrar Veterinario</a>
+            <a href="{% url 'user_app:registrar-admin' %}" class="boton">Registrar Administrador</a>
         </div>
     </div>
 
