Vista administrador al 80%

--- a/templates/administrador/listado_usuarios_home.html
+++ b/templates/administrador/listado_usuarios_home.html
@@ -9,8 +9,8 @@
 
         <div class="contenedor-botones">
             <a href="{% url 'user_app:verAdmins' %}" class="boton">Listado administradores</a>
-            <a href="#" class="boton">Listado Vendedores</a>
-            <a href="#" class="boton">Listado Veterinarios</a>
+            <a href="{% url 'user_app:verVendedor' %}" class="boton">Listado Vendedores</a>
+            <a href="{% url 'user_app:verVeterinario' %}" class="boton">Listado Veterinarios</a>
         </div>
     </div>
 
