--- a/templates/administrador/verVeterinario.html
+++ b/templates/administrador/verVeterinario.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{% static 'styles/ventas.css' %}">
   <script src="https://kit.fontawesome.com/7fed639e7f.js" crossorigin="anonymous"></script>
     <section class="header">
-      <h2 class="ventas">Lista de Administradores</h2>
+      <h2 class="ventas">Lista de Veterinarios</h2>
     </section>
     <form method="get">
     <div class="buscar">
@@ -27,33 +27,35 @@
             <th>Sexo</th>
             <th>Telefono</th> 
             <th>Fecha Ingreso</th>  
-            <th>Correo Electronico</th> 
+            <th>Correo Electronico</th>
+            <th>Titulo</th>  
           </tr>
         </thead>
         <tbody>
           
-          {% for a in object_list %}
+          {% for v in object_list %}
           <tr id="valores">
-            <td>{{ a.cedula|truncatechars:20 }}</td>
-            <td>{{ a.nombre|truncatechars:20 }}</td>
-            <td>{{ a.apellidos|truncatechars:20 }}</td>
-            <td>{{ a.edad|truncatechars:20 }}</td>
-            <td>{{ a.sexo }}</td>
-            <td>{{ a.telefono }}</td> 
-            <td>{{ a.fecha_ingreso }}</td> 
-            <td>{{ a.correo }}</td>  
+            <td>{{ v.cedula|truncatechars:20 }}</td>
+            <td>{{ v.nombre|truncatechars:20 }}</td>
+            <td>{{ v.apellidos|truncatechars:20 }}</td>
+            <td>{{ v.edad|truncatechars:20 }}</td>
+            <td>{{ v.sexo }}</td>
+            <td>{{ v.telefono }}</td> 
+            <td>{{ v.fecha_ingreso }}</td> 
+            <td>{{ v.correo }}</td>
+            <td>{{ v.titulo }}</td>    
             <td>
-              <a class="fa-solid fa-crop" href="{% url 'user_app:actualizarAdmins' a.id %}"></a>
+              <a class="fa-solid fa-crop" href="{% url 'user_app:actualizarVeterinario' v.id %}"></a>
               <a class="fa-regular fa-trash-can" href="javascript:abrir()"></a>
             </td>
           </tr>
           
           
             <div class="Ventanae" id="elimi">
-              <form action="{% url 'user_app:eliminarAdmins' a.id %}" method="post">
+              <form action="{% url 'user_app:eliminarVeterinario' v.id %}" method="post">
                 {% csrf_token %}
-                <h3>¿Quiere eliminar este administrador? </h3>
-                <h3>{{ a.nombre }}</h3>
+                <h3>¿Quiere eliminar este veterinario? </h3>
+                <h3>{{ v.nombre }}</h3>
                 <h3>confirme que desea realizar</p>
                   <br>
                   <button type="submit" id="Confirmar">Confirmar</button>
