--- a/templates/ventas/update.html
+++ b/templates/ventas/update.html
@@ -49,7 +49,7 @@
                   </div>
               </div>
           
-                  <button type="submit" class="btn">Guardar</button>
+                  <button type="submit" class="btn">Actualizar</button>
                 </form>
               </div>
               <div class="imagen-content">
