--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -163,20 +163,20 @@ aside .sidebar a:last-child{
     width:100%;
 }
 
-aside .sidebar a.active{
+aside .sidebar a.active:hover{
     background: var(--color-light);
     color: var(--color-primary);
     margin-left: 0;
 }
 
-aside .sidebar a.active:before{
+aside:before .sidebar:before a.active:before{
     content: " ";
     width:6px;
     height:100%;
     background: var(--color-primary);
 }
 
-aside .sidebar a.active span{
+aside .sidebar a.active span:hover{
     color: var(--color-primary);
     margin-left:calc(1rem - 6px)
 }
