--- a/templates/index.html
+++ b/templates/index.html
@@ -24,37 +24,31 @@
             </div>
         </div>
         <div class="sidebar">
-            <a href="{% url 'veterinaria_app:home' %}" class="inicio opc">
+            <a href="{% url 'veterinaria_app:home' %}" class="active inicio opc">
                 <span class="material-icons-sharp">
                     grid_view
                 </span>
                 <h3>Inicio</h3>
             </a>
-            <a href="{% url 'veterinaria_app:inicio-historial' %}" class="historial opc">
+            <a href="{% url 'veterinaria_app:inicio-historial' %}" class="active historial opc">
                 <span class="material-icons-sharp">
                     history
                 </span>
                 <h3>Historial clinico</h3>
             </a>
-            <a href="#" class="active opc">
-                <span class="material-icons-sharp">
-                    person
-                </span>
-                <h3>Clientes activos</h3>
-            </a>
-            <a href="{% url 'ventas_app:ventas' %}" class="btn-ventas opc">
+            <a href="{% url 'ventas_app:ventas' %}" class="active btn-ventas opc">
                 <span class="material-icons-sharp">
                     shopping_cart
                 </span>
                 <h3>inventario</h3>
             </a>
-            <a href="{% url 'user_app:administrador' %}" class="btn-ventas">
+            <a href="{% url 'user_app:administrador' %}" class="active btn-ventas">
                 <span class="material-icons-sharp">
                     admin_panel_settings
                 </span>
                 <h3>Administrador</h3>
             </a>
-            <a href="{% url 'ventas_app:facturas' %}" class="btn-ventas opc">
+            <a href="{% url 'ventas_app:facturas' %}" class="active btn-ventas opc">
                 <span class="material-icons-sharp">
                     monetization_on
                 </span>
